syntax = "proto3";

option java_package = "apcera.kurma.metadata";

package protocol;

// The greeter service definition.
service KurmaMetadata {
  // Sends a greeting
  rpc RegisterPod (PodDefinition) returns (RegisterResponse) {}
  rpc UnregisterPod (PodID) returns (UnregisterResponse) {}
}

// The request message containing the user's name.
message PodDefinition {
	PodID ID = 1;
	bytes PodManifest = 2;
	optional string HMACKey = 3;
}

message PodID {
	string UUID = 1;
}

message RegisterResponse {
	string Token = 1;
}

message UnregisterResponse {
	int32 StatusCode = 1;
}